# youtube_proj

./: .gitignore  README.md  pyproject.toml  transcript.json
youtube_project/: main.py
