[tool.poetry]
name = "youtube-project"
version = "0.1.0"
description = ""
authors = ["Delphine Tai-Beauchamp <delphinetaibeauchamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
youtube-transcript-api = "^0.6.2"
langchain = "^0.2.7"
pydantic = "^2.8.2"
pytube = "^15.0.0"
langchain-openai = "^0.1.16"
langchain-core = "^0.2.18"
youtube-dl = "^2021.12.17"
openai = "^1.35.13"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
